[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://UI/DynamicFontUI.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.25098 )

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Rows" type="VBoxContainer" parent="."]
margin_left = 464.0
margin_top = 198.0
margin_right = 530.0
margin_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="Rows"]
margin_right = 66.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "PAUSE"
align = 1

[node name="HSeparator" type="HSeparator" parent="Rows"]
margin_top = 24.0
margin_right = 66.0
margin_bottom = 28.0

[node name="Resume" type="Button" parent="Rows"]
margin_top = 32.0
margin_right = 66.0
margin_bottom = 52.0
text = "Resume"

[node name="Restart" type="Button" parent="Rows"]
margin_top = 56.0
margin_right = 66.0
margin_bottom = 76.0
text = "Restart"

[node name="Exit" type="Button" parent="Rows"]
margin_top = 80.0
margin_right = 66.0
margin_bottom = 100.0
text = "Exit"

[connection signal="pressed" from="Rows/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Rows/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Rows/Exit" to="." method="_on_Exit_pressed"]
